--- a/projects.html
+++ b/projects.html
@@ -9,38 +9,49 @@
   </head>
   <body class="portfolio">
 
-    <div class="site-nav">
-      <label for="nav-state" class="hamburger open">
-        <div></div>
+    <div class="site-nav-wrapper">
+      <input type="checkbox" id="nav-trigger-state" class="nav-trigger-state">
+
+      <label for="nav-trigger-state" id="nav-trigger" class="nav-trigger">
+        <span></span>
       </label>
-      <input type="checkbox" id="nav-state">
 
-      <nav class="menu">
-        <header>
-          <h2 class="title">MENU</h2>
-          <label for="nav-state" class="hamburger close">
-            <div></div>
-          </label>
-        </header>
-
-        <ul>
-          <li>
-            <a href="/">
-              <span class="item">About</span>
-            </a>
-          </li>
-          <li>
-            <a href="/portfolio" class="selected">
-              <span class="item">Portfolio</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+      <div class="site-nav">
+        <div class="site-nav-content">
+          <h2 class="subtitle small">Navigation</h2>
+          <nav>
+            <ul>
+              <li>
+                <a class="nav-link" href="/">
+                  About
+                </a>
+              </li>
+              <li>
+                <a class="nav-link" href="/projects">
+                  Projects
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="additional-info">
+          <h2 class="subtitle small">Contact Info</h2>
+          <address>
+            <ul>
+              <li>
+                <a href="mailto:george_y@outlook.com">george_y@outlook.com</a>
+              </li>
+              <li>(831) 346-2881</li>
+              <li>Dublin, CA</li>
+            </ul>
+          </address>
+        </div>
+      </div>
     </div>
 
     <div class="hero">
       <div class="hero_text">
-        <h1 class="title">Portfolio</h1>
+        <h1 class="title">Projects</h1>
       </div>
     </div>
 
