--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css">
+    <script src="assets/js/main.js" charset="utf-8"></script>
     <script src="https://kit.fontawesome.com/6e53f3b2b2.js" crossorigin="anonymous"></script>
     <title>Portfolio - George Yokoyama | Web Developer</title>
   </head>
-  <body class="portfolio">
+  <body id="top" class="portfolio">
 
     <div class="site-nav-wrapper">
       <input type="checkbox" id="nav-trigger-state" class="nav-trigger-state">
@@ -26,7 +27,7 @@
                   About
                 </a>
               </li>
-              <li>
+              <li class="selected">
                 <a class="nav-link" href="/projects">
                   Projects
                 </a>
@@ -47,6 +48,12 @@
           </address>
         </div>
       </div>
+    </div>
+
+    <div class="to-top">
+      <a id="toTop" href="#top">
+        <i class="fas fa-angle-double-up"></i>
+      </a>
     </div>
 
     <div class="hero">
