--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </h2>
           <p class="subtitle">Hi there! Glad you're here!</p>
           <div class="content">
-            <p>I'm a lead web developer at RubyThree, a web development agency that helps startups get their MVP out. I work on agile projects using Ruby on Rails to get features out quickly.</p>
+            <p>I'm a web developer with experience working on agile projects using Ruby on Rails to get features out quickly.</p>
             <p>Other than RoR, I've worked on projects using modern JavaScript frameworks such as ReactJS and AngularJS. And VanillaJS, of course!</p>
             <p>Want to network or contact me? Connect with me on <a href="https://www.linkedin.com/in/georgeyokoyama" target="_blank">LinkedIn&nbsp;<i class="fas fa-external-link-alt"></i></a>!</p>
             <p>Thanks for visiting!</p>
@@ -105,7 +105,7 @@
                   <h3 class="title">Lead Web Developer <span class="separator">|</span> RubyThree</h3>
                   <h4 class="subtitle">
                     <i class="far fa-calendar-alt"></i>&nbsp;
-                    Aug 2019 – Nowadays
+                    Aug 2019 – October 2019
                   </h4>
                   <p>
                     Supervise and assist junior members of the team for speedy development and deployment.
@@ -264,7 +264,7 @@
       </div>
 
       <p>
-        <span class="subtitle small">&copy;2019 George E. Yokoyama. Last updated: Oct. 2019</span>
+        <span class="subtitle small">&copy;2019 George E. Yokoyama. Last updated: June 2020</span>
       </p>
     </footer>
 
