--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
       </div>
 
       <p>
-        <span class="subtitle small">&copy;2019 George E. Yokoyama. Last updated: Oct. 2019</span>
+        <span class="subtitle small">&copy;2019 George E. Yokoyama. Last updated: June 2020</span>
       </p>
     </footer>
 
