Migrate to Webpack
* Setup webpack
* yarn install packages
* edit cofig files to show template.html and connect with index.js

--- a/public/projects.html
+++ b/public/projects.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <script src="assets/js/main.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="../src/assets/styles//main.css">
+    <script src="../src/main.js" charset="utf-8"></script>
     <script src="https://kit.fontawesome.com/6e53f3b2b2.js" crossorigin="anonymous"></script>
     <title>Portfolio - George Yokoyama | Web Developer</title>
   </head>
@@ -68,7 +68,7 @@
         <div class="in-box">
           <div class="project">
             <figure>
-              <img src="assets/img/mevn-boilerplate.PNG" alt="MEVN Boilerplate app landing page">
+              <img src="./src/assets/images/mevn-boilerplate.PNG" alt="MEVN Boilerplate app landing page">
               <figcaption>Landing page</figcaption>
             </figure>
             <div class="project-text">
@@ -86,7 +86,7 @@
         <div class="in-box">
           <div class="project">
             <figure>
-              <img src="assets/img/secret-diary.PNG" alt="Secret Diary app landing page">
+              <img src="src/assets/images/secret-diary.PNG" alt="Secret Diary app landing page">
               <figcaption>Landing page</figcaption>
             </figure>
             <div class="project-text">
