--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
             <i class="fas fa-user-ninja icon"></i>&nbsp;
             ABOUT ME
           </h2>
-          <p class="subtitle">Hi there! Glad you're here!</p>
           <div class="content">
             <p>I'm a web developer with experience working on agile projects using Ruby on Rails to get features out quickly.</p>
             <p>Other than RoR, I've worked on projects using modern JavaScript frameworks such as ReactJS and AngularJS. And VanillaJS, of course!</p>
@@ -98,7 +97,6 @@
               <i class="icon fas fa-suitcase"></i>&nbsp;
               Experience
             </h2>
-            <p class="subtitle">The Technical jobs I've had.</p>
             <div class="content">
               <div class="stack">
                 <div class="stack-item">
@@ -156,7 +154,6 @@
               <i class="fas fa-university icon"></i>&nbsp;
               Education
             </h2>
-            <p class="subtitle">Never failed a class.</p>
             <div class="content">
               <div class="stack">
                 <div class="stack-item">
@@ -194,7 +191,7 @@
             </a>
           </p>
           <p>
-            <a href="https://github.com/GeorgeEYokoyama/" target="_blank">
+            <a href="https://github.com/geyokoyama/" target="_blank">
               <i class="fab fa-github"></i>&nbsp;
               GitHub&nbsp;
               <i class="fas fa-external-link-alt"></i>
@@ -216,30 +213,19 @@
             <i class="fas fa-project-diagram icon"></i>&nbsp;
             PROJECTS
           </h2>
-          <p class="subtitle">Made these to learn new stuff. <a href="/projects">More&nbsp;>></a></p>
+          <a href="/projects">More&nbsp;>></a>
           <div class="content">
 
-            <div class="project mevn-boilerplate">
-              <img class="project-image" src="assets/img/mevn-boilerplate.PNG" alt="screenshot of mevn-boilerplate project">
+            <div class="project webpack-template">
               <div class="project-text">
                 <h3>
-                  <a href="https://github.com/GeorgeEYokoyama/mevn-boilerplate/" target="_blank">
-                    MEVN Boilerplate&nbsp;<i class="fas fa-external-link-alt"></i>
+                  <a href="https://github.com/geyokoyama/webpack-template/" target="_blank">
+                    Webpack Template&nbsp;<i class="fas fa-external-link-alt"></i>
                   </a>
                 </h3>
-                <p>A simple web app boilerplate built on MongoDB, Node.js, Express, and Vue.js. Authentication and app routes are already setup so that developers can hit the ground running.</p>
-              </div>
-            </div>
-
-            <div class="project secret-diary">
-              <img class="project-image" src="assets/img/secret-diary.PNG" alt="screenshot of secret-diary project">
-              <div class="project-text">
-                <h3>
-                  <a href="https://github.com/georgeeyokoyama/secret-diary" target="_blank">
-                    Secret Diary&nbsp;<i class="fas fa-external-link-alt"></i>
-                  </a>
-                </h3>
-                <p>A diary app created with PHP and MySQL. Users can create rich text to write down their thoughts and ideas with style.</p>
+                <p>
+                  I originally created this repo to learn how to configure webpack, which I've only used through the [create-react-app](https://create-react-app.dev/) and [webpacker](https://github.com/rails/webpacker) while developing with Rails. It's meant to make experimenting easy such that it should take little difficulty adding JavaScript frameworks such as React and Vue. It's my goto repo for experimentation whenever I find interesting webdev tips and tricks.
+                </p>
               </div>
             </div>
 
@@ -247,7 +233,6 @@
         </div>
 
         <div class="out-box">
-          This website is still a work in progress and I plan on adding more projects and features soon. Come back later!
         </div>
       </section>
 
@@ -255,7 +240,7 @@
 
     <footer class="site-footer">
       <div class="social">
-        <a class="icon" href="https://github.com/GeorgeEYokoyama/" title="to github">
+        <a class="icon" href="https://github.com/geyokoyama/" title="to github">
           <i class="fab fa-github"></i>
         </a>
         <a class="icon" href="https://www.linkedin.com/in/georgeyokoyama" title="to github">
