--- a/projects.html
+++ b/projects.html
@@ -67,33 +67,11 @@
       <section class="projects">
         <div class="in-box">
           <div class="project">
-            <figure>
-              <img src="assets/img/mevn-boilerplate.PNG" alt="MEVN Boilerplate app landing page">
-              <figcaption>Landing page</figcaption>
-            </figure>
             <div class="project-text">
-              <h2 class="title">MEVN Boilerplate</h2>
-              <p class="subtitle">MongoDB • Node.js • Express • Vue.js</p>
+              <h2 class="title">Webpack Template</h2>
+              <p class="subtitle">Webpack • Babel • PostCSS • Sass</p>
               <p>
-                A simple web app boilerplate built on MongoDB, Node.js, Express, and Vue.js. Authentication and app routes are already setup so that developers can hit the ground running.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="projects">
-        <div class="in-box">
-          <div class="project">
-            <figure>
-              <img src="assets/img/secret-diary.PNG" alt="Secret Diary app landing page">
-              <figcaption>Landing page</figcaption>
-            </figure>
-            <div class="project-text">
-              <h2 class="title">Secret Diary</h2>
-              <p class="subtitle">PHP • MySQL</p>
-              <p>
-                A diary app created with PHP and MySQL. Users can create rich text to write down their thoughts and ideas with style.
+                I originally created this repo to learn how to configure webpack, which I've only used through the [create-react-app](https://create-react-app.dev/) and [webpacker](https://github.com/rails/webpacker) while developing with Rails. It's meant to make experimenting easy such that it should take little difficulty adding JavaScript frameworks such as React and Vue. It's my goto repo for experimentation whenever I find interesting webdev tips and tricks.
               </p>
             </div>
           </div>
@@ -104,7 +82,7 @@
 
     <footer class="site-footer">
       <div class="social">
-        <a class="icon" href="https://github.com/GeorgeEYokoyama/" title="to github">
+        <a class="icon" href="https://github.com/geyokoyama/" title="to github">
           <i class="fab fa-github"></i>
         </a>
         <a class="icon" href="https://www.linkedin.com/in/georgeyokoyama" title="to github">
@@ -113,7 +91,7 @@
       </div>
 
       <p>
-        <span class="subtitle small">&copy;2019 George E. Yokoyama. Last updated: June 2020</span>
+        <span class="subtitle small">&copy;2019 George E. Yokoyama. Last updated: June 2021</span>
       </p>
     </footer>
 
