--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
               <h2 class="title">Webpack Template</h2>
               <p class="subtitle">Webpack • Babel • PostCSS • Sass</p>
               <p>
-                I originally created this repo to learn how to configure webpack, which I've only used through the [create-react-app](https://create-react-app.dev/) and [webpacker](https://github.com/rails/webpacker) while developing with Rails. It's meant to make experimenting easy such that it should take little difficulty adding JavaScript frameworks such as React and Vue. It's my goto repo for experimentation whenever I find interesting webdev tips and tricks.
+                I originally created this repo to learn how to configure webpack, which I've only used through the <a href="https://create-react-app.dev/">create-react-app</a> and <a href="https://github.com/rails/webpacker">webpacker</a> while developing with Rails. It's meant to make experimenting easy such that it should take little difficulty adding JavaScript frameworks such as React and Vue. It's my goto repo for experimentation whenever I find interesting webdev tips and tricks.
               </p>
             </div>
           </div>
